新增岗位接口
