# models/dto/SysPost.go
@@ -4,8 +4,13 @@
 package dto
 
 import (
+	"errors"
+	"gin-api/common/utils"
 	"gin-api/models/entity"
 	"gin-api/pkg/db"
+	"time"
+
+	"gorm.io/gorm"
 )
 
 // 分页查询岗位列表
@@ -31,4 +36,36 @@ func GetSysPostList(PageNum, PageSize int, PostName, PostStatus, BeginTime, EndT
 	}
 
 	return sysPost, count, nil
+}
+
+func AddSysPost(addSysPostDto entity.AddSysPostDto) bool {
+	tx := db.Db.Begin()
+	if tx.Error != nil {
+		return false
+	}
+	var exittingSysPost entity.SysPost
+	if err := tx.Where("post_code = ?", addSysPostDto.PostCode).Or("post_name = ?", addSysPostDto.PostName).First(&exittingSysPost).Error; err != nil {
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			addSysPost := entity.SysPost{
+				PostCode:   addSysPostDto.PostCode,
+				PostName:   addSysPostDto.PostName,
+				PostStatus: addSysPostDto.PostStatus,
+				CreateTime: utils.HTime{Time: time.Now()},
+				Remark:     addSysPostDto.Remark,
+			}
+			if err := tx.Create(&addSysPost).Error; err != nil {
+				tx.Rollback()
+				return false
+			} else {
+				tx.Commit() // 提交事务
+				return true
+			}
+		} else {
+			tx.Rollback()
+			return false
+		}
+	} else {
+		tx.Rollback()
+		return false
+	}
 }
